Refuse an error the catalogue has not got, and assert every expression
The catalogue is what makes an error spec valid and it says no three
times. Find_Error_Info looks the type up and then the id inside it, each
miss naming the word that was not found. Then a third refusal names the
whole spec: an error whose code is below a hundred cannot be built by
hand, which is the Throw category, numbering from nothing -- so a script
may not manufacture a BREAK or a HALT and throw it as though the
interpreter had. JEBOL built every one of them happily.

An error rebuilt from an object skips that third check, the object branch
returning three lines before it, and it does not re-evaluate the fields
either -- they have been evaluated once already. That is what makes the
round trip work: TO-OBJECT an error, change what you like, TO-ERROR it
back, and the code is worked out again rather than believed.

ASSERT walked its block with DO and looked at the value, which is not
what it does: it checks every expression in turn and stops at the first
false one, so `assert [true 1 + 3 = 2 true]` passed on the strength of
the last one. What it raises with is the block itself and not a sentence
about it. ASSERT/TYPE's three refusals were all the wrong error with a
message where the C puts a value.

ROUND on a time did nothing at all. A time is nanoseconds and the scale
is read in the same units, but what comes back depends on how the scale
was written: a time scale answers a time, a number answers a count of
seconds.